# ieee_avc

./: .gitignore  README.md
config/: ntp.conf
src/avc/: CMakeLists.txt  package.xml
src/avc/config/: amcl.yaml  ekf_global.yaml  ekf_local.yaml  gps.yaml  imu.yaml  joy_teleop.yaml  laser.yaml  map.yaml  mux.yaml  vesc.yaml
src/avc/config/nav/: costmap_common.yaml  costmap_local.yaml  global_planner.yaml  local_planner.yaml  move_base.yaml
src/avc/launch/: 2016-09-05-17-26-14.bag  amcl.launch  joystick.launch  localization.launch  mapping.launch  master.launch  navigation.launch  sensors.launch  teleop.launch  teleop_with_localization.launch  teleop_with_sensors.launch  teleop_with_sensors_bag.launch  tk1_mapping.launch  tk1_nav.launch  tk1_teleop.launch  tk2_mapping.launch  tk2_nav.launch  tk2_teleop.launch  vesc_with_sensors.launch
src/avc/launch/clockSync/: sync.sh
src/avc/launch/includes/amcl/: amcl.launch.xml  map.launch.xml
src/avc/launch/includes/inputs/: joy_teleop.launch.xml
src/avc/launch/includes/localization/: ekf_global_localization.launch.xml  ekf_local_localization.launch.xml  navsat_transform.launch.xml
src/avc/launch/includes/sensors/: .static_transforms.launch.xml.swo  sensors.launch.xml  static_transforms.launch.xml
src/avc/launch/includes/tf/: static_transforms.launch.xml
src/avc/launch/includes/vesc/: vesc.launch.xml
src/avc/map/: map.yaml
src/avc/map/avc/: map.pgm  map.yaml
src/avc/map/basement/: map.pgm  map.yaml
src/avc/map/ieee_room/: map.pgm  map.yaml
src/avc/nodes/: cmd_vel_to_ackermann_drive.py  nav_goals.cpp
(+5 files in other folders)
