<?xml version="1.0"?>
<package>
  <name>avc</name>
  <version>0.0.1</version>
  <description>AVC launch scripts</description>

  <author>Dana Sorensen</author>
  <maintainer email="dana.r.sorensen@gmail.com">Dana Sorensen</maintainer>
  <license>BSD</license>

  <!-- <license>"license</license> -->

  <!-- <url type="website">http://wiki.ros.org/pwm_sysfs_driver</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <!--<build_depend></build_depend>-->

  <run_depend>tf</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>rviz</run_depend>

  <!-- mapping -->
  <run_depend>gmapping</run_depend>

  <!-- sensors -->
  <run_depend>serial</run_depend>
  <run_depend>razor_imu_9dof</run_depend>
  <run_depend>sick_tim</run_depend>
  <run_depend>nmea_navsat_driver</run_depend>

  <!-- localization -->
  <run_depend>robot_localization</run_depend>
  <run_depend>amcl</run_depend>
  <run_depend>map_server</run_depend>

  <!-- navigation -->
  <run_depend>move_base</run_depend>
  <run_depend>ackermann_msgs</run_depend>

  <!-- teleop -->
  <run_depend>joy</run_depend>
  <run_depend>joy_teleop</run_depend>

  <export>
  </export>
</package>
